Fixed menu jumping around

--- a/src/components/roll.css
+++ b/src/components/roll.css
@@ -8,7 +8,7 @@ h1 {
     color: #583FFC;
 }
 
-body {
+.roll-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
